-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0 Beta 1
-
None
-
5bd0e08063fcacba0c2b63528712968c7d74e7f9
This problem has been already reported at https://bugs.webkit.org/show_bug.cgi?id=95968
The failing test case can be found in the WebKit repository at http://trac.webkit.org/browser/trunk/Source/WebKit2/UIProcess/API/qt/tests/qmltests/WebView/tst_devicePixelRatio.qml
When this test is executed QtDeclarative crashes but not all the time.
The problem occurs when the declarative tries to look up the lastResultChanged property in the QML property cache (QQmlPropertyCache::findProperty). The function findProperty iterates through QQmlVMEMetaObject chain in a loop to find a meta-object which holds a particular context (see src/qml/qml/qqmlpropertycache.cpp:946). It seems this meta-object chain is messed up in some cases because the function parentVMEMetaObject returns a wrong pointer instead of nil.
| For Gerrit Dashboard: QTBUG-27334 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 35894,2 | Fix a crash in QQmlPropertyCache::findProperty | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |